--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,19 @@
 {
   "dependencies": {
-    "com.coffee.upm-git-extension": "https://github.com/mob-sakai/UpmGitExtension.git",
     "com.tofunaut.tofuunity": "https://github.com/njelly/TofuUnity.git#master",
-    "com.unity.2d.animation": "3.2.2",
-    "com.unity.2d.pixel-perfect": "2.0.4",
-    "com.unity.2d.psdimporter": "2.1.4",
+    "com.unity.2d.animation": "4.2.2",
+    "com.unity.2d.pixel-perfect": "3.0.2",
+    "com.unity.2d.psdimporter": "3.1.4",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "3.0.11",
+    "com.unity.2d.spriteshape": "4.1.2",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.addressables": "1.12.0",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ide.rider": "1.1.4",
-    "com.unity.ide.vscode": "1.2.0",
+    "com.unity.collab-proxy": "1.3.8",
+    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.2",
+    "com.unity.ide.vscode": "1.2.1",
     "com.unity.test-framework": "1.1.14",
-    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.textmeshpro": "3.0.0-preview.1",
     "com.unity.timeline": "1.2.14",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
@@ -47,15 +47,5 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  },
-  "lock": {
-    "com.coffee.upm-git-extension": {
-      "revision": "HEAD",
-      "hash": "087dd7026916c225f2f83fe92d26c0740e718ff5"
-    },
-    "com.tofunaut.tofuunity": {
-      "revision": "master",
-      "hash": "14031330f0948d6fd7eb8531a349ff16e54ca594"
-    }
   }
 }
