fixed issue with interactor reticle going down instead of up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 ﻿{
     "editor.fontSize": 12,
+    "editor.fontLigatures": true,
     "editor.codeLens": false,
     "editor.formatOnSave": true,
     "terminal.integrated.fontSize": 12,
