added google_sheets_credentials.json to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# TofuRPG
+Assets/_Game/DataAssets/google_sheets_credentials.json
+Assets/_Game/DataAssets/google_sheets_credentials.json.meta
+
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
